--- a/config.toml
+++ b/config.toml
@@ -1,92 +1,17 @@
 baseURL = "https://ridingintraffic.github.io/wiki/"
-languageCode = "en-us"
 title = "wiki"
 theme = "after-dark"
 publishDir = "docs"
 
 # config file (default is path/config.yaml|json|toml)
 config =                     "config.toml"
-contentDir =                  "content"
-dataDir =                     "data"
-defaultLayout =               "post"
-# Missing translations will default to this content language
-defaultContentLanguage =      "en"
-# Renders the default content language in subdir, e.g. /en/. The root directory / will redirect to /en/
-defaultContentLanguageInSubdir =  false
-disableLiveReload =           false
-# Enable GitInfo feature
-enableGitInfo =               false
-# Build robots.txt file
-enableRobotsTXT =             false
-# Do not inject generator meta tag on homepage
-disableHugoGeneratorInject =  false
-# Allows you to disable all page types and will render nothing related to 'kind';
-# values = "page", "home", "section", "taxonomy", "taxonomyTerm", "RSS", "sitemap", "robotsTXT", "404"
-disableKinds = []
-# Do not make the url/path to lowercase
-disablePathToLower =          false
-# Enable Emoji emoticons support for page content; see emoji-cheat-sheet.com
-enableEmoji =                 false
-# Show a placeholder instead of the default value or an empty string if a translation is missing
-enableMissingTranslationPlaceholders = false
-footnoteAnchorPrefix =        ""
-footnoteReturnLinkContents =  ""
-# google analytics tracking id
-googleAnalytics =             ""
-# if true, auto-detect Chinese/Japanese/Korean Languages in the content. (.Summary and .WordCount can work properly in CJKLanguage)
-hasCJKLanguage =              false
-languageCode =                ""
-# the length of text to show in a .Summary
-summaryLength =              70
-layoutDir =                   "layouts"
-# Enable Logging
-log =                         false
-# Log File path (if set, logging enabled automatically)
-logFile = log.log
-# maximum number of items in the RSS feed
-rssLimit =                    15
-# "toml","yaml", or "json"
-metaDataFormat =              "toml"
-newContentEditor =            ""
-# Don't sync permission mode of files
-noChmod =                     false
-# Don't sync modification time of files
-noTimes =                     false
-# Pagination
-paginate =                    10
-paginatePath =                "page"
-# See "content-management/permalinks"
-permalinks =
-# Pluralize titles in lists using inflect
-pluralizeListTitles =         true
-# Preserve special characters in taxonomy names ("Gérard Depardieu" vs "Gerard Depardieu")
-preserveTaxonomyNames =       false
-# enables syntax guessing for code fences without specified language
-pygmentsCodeFencesGuessSyntax = false
-# color-codes for highlighting derived from this style
-pygmentsStyle =               "monokai"
-# true: use pygments-css or false: color-codes directly
-pygmentsUseClasses =          false
-# see "Section Menu for Lazy Bloggers", /templates/menu-templates for more info
-SectionPagesMenu =
-# default sitemap configuration map
-sitemap =
-# filesystem path to read static files relative from
-staticDir =                   "static"
-# display memory and timing of different steps of the program
-stepAnalysis =                false
-# theme to use (located by default in /themes/THEMENAME/)
-themesDir =                   "themes"
-theme =                       ""
-title =                       ""
-# if true, use /filename.html instead of /filename/
-uglyURLs =                    false
-# verbose output
-verbose =                     false
-# verbose logging
-verboseLog =                  false
-# watch filesystem for changes and recreate as needed
-watch =                       true
+
+canonifyURLs = true
+
 [taxonomies]
   category = "categories"
   tag = "tags"
+
+[params]
+  subtitle = "Hugo is Absurdly Fast!"
+  author = "John Doe"
